--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@
     --primary-color: #03A84E;
     --white-color: #fff;
     --black-color: #222;
+    --border-color: #f4f7f7;
+
+    --p-color: #656565;
 
     --jost: 'jost';
 
@@ -24,10 +27,13 @@
     --fs-20: 20px;
     --fs-18: 18px;
     --fs-16: 16px;
+
+    --border-2: 2px;
 }
 
 body {
     font-family: var(--jost);
+    color: var(--p-color);
 }
 
 .primary-c {
@@ -57,7 +63,7 @@ select {
     display: inline-block;
     font-weight: 600;
     color: var(--white-color);
-    border-radius: 0;
+    border-radius: var(--border-2);
     position: relative;
     box-shadow: none;
     outline: none;
@@ -75,8 +81,20 @@ select {
     background: var(--primary-color);
     min-width: 110px;
     min-height: 40px;
+    padding: 0 15px;
+
 }
 
+
+.section-title {}
+
+.section-title .h2 {
+    padding-bottom: 10px;
+}
+
+.section-title p {
+    font-size: 18px;
+}
 
 /* Navbar */
 .topNav {
@@ -145,6 +163,7 @@ select {
     justify-content: center;
     color: var(--white-color);
     font-size: 30px;
+    border-radius: var(--border-2);
 }
 
 
@@ -158,7 +177,6 @@ select {
 .banner-search-form select {
     width: 100%;
     height: 60px;
-    border-radius: 0;
     padding: 10px 20px;
     min-width: 270px;
     outline: none !important;
@@ -168,9 +186,145 @@ select {
 
 .banner-search-form .theme-btn {
     font-size: var(--fs-20);
-    min-width: 70px;
+    min-width: auto;
 }
 
 .banner-search-form input::placeholder {
     color: var(--black-color);
+}
+
+/* Range */
+
+.banner-range {
+    position: relative;
+}
+
+#toggleInfo {
+    position: absolute;
+    background-color: var(--white-color);
+    width: 100%;
+    margin-top: 10px;
+    padding: 30px;
+    border-radius: var(--border-2);
+}
+
+.rang-cont {
+    display: grid;
+    gap: 16px
+}
+
+.range-item {
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    gap: 20px;
+}
+
+.range-title {
+    display: grid;
+}
+
+.range-title .h5 {
+    font-size: 15px;
+    display: grid;
+    align-items: center;
+}
+
+.range-wrap {
+    display: grid;
+    grid-template-columns: 1fr 60px;
+}
+
+.range-wrap span {
+    margin-left: auto;
+}
+
+
+.range-item select {
+    background-position-x: 98%;
+}
+
+.range-item span {
+    font-weight: 500;
+}
+
+.range[type=range],
+.range[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.range[type=range] {
+    background-color: var(--primary-color);
+    height: 5px;
+    align-self: center;
+}
+
+/* .range::-moz-range-thumb, */
+.range[type=range]::-webkit-slider-thumb {
+    background-color: var(--primary-color);
+    width: 8px;
+    height: 15px;
+    border-radius: var(--border-2);
+    cursor: pointer;
+}
+
+
+
+/* Candidate */
+.top-candidate-area {}
+
+.candidates-item-list {}
+
+
+.candidates-filter {
+    display: inline-flex;
+    gap: 15px;
+}
+
+.candidates-filter li {
+    display: -inlinegrid;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    color: var(--primary-color);
+    border: 1px solid var(--border-color);
+}
+
+.candidates-filter li.active {
+    color: var(--white-color);
+    background: var(--primary-color);
+}
+
+.candidates-grid {}
+
+.candidates-item {
+    margin-top: 25px;
+    border: 1px solid var(--border-color);
+    gap: 20px;
+    padding: 20px;
+    position: relative;
+}
+
+.candidates-number {
+    position: absolute;
+}
+
+.candidates-item .rating {
+    position: absolute;
+    right: 21px;
+    top: 20px;
+    font-weight: 500;
+    color: var(--black-color);
+}
+
+.candidates-text {
+    display: grid;
+}
+.candidates-text .h6{
+    font-size: 15px;
+    color: var(--primary-color);
+}
+
+.candidates-item .rating span{
+    color: var(--primary-color);
 }
