--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ select {
     margin-top: 10px;
     padding: 30px;
     border-radius: var(--border-2);
+    border: 1px solid var(--primary-color);
 }
 
 .rang-cont {
