--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,14 @@ body {
     font-weight: 700;
 }
 
+.primary-color {
+    color: var(--primary-color);
+}
+
+.primary-bg {
+    background-color: var(--primary-color);
+}
+
 .section-bg {
     background-color: #e1f6ff;
 }
@@ -135,6 +143,10 @@ select {
     font-weight: 500;
 }
 
+.menuBlack li a {
+    color: var(--black-color);
+}
+
 
 /* Banner */
 .banner-area {
@@ -182,10 +194,12 @@ select {
     width: 100%;
     height: 60px;
     padding: 10px 20px;
-    min-width: 270px;
+    /* min-width: 270px; */
     outline: none !important;
     box-shadow: none !important;
     color: var(--black-color);
+    border: 1px solid #eee;
+    border-radius: var(--border-2);
 }
 
 .banner-search-form .theme-btn {
@@ -211,6 +225,7 @@ select {
     padding: 30px;
     border-radius: var(--border-2);
     border: 1px solid var(--primary-color);
+    z-index: 1;
 }
 
 .rang-cont {
@@ -625,7 +640,7 @@ a.details-heart i {
     color: #03a84e;
 }
 
-.loca-dot .jobT {
+.jobT {
     /* border: 1px solid #03A84E; */
     font-size: 14px;
     font-weight: 400;
@@ -633,16 +648,16 @@ a.details-heart i {
     color: var(--black-color);
 }
 
-.loca-dot .jobpart {
+.jobpart {
     background-color: #c2ffdc;
 }
 
-.loca-dot .jobFull {
+.jobFull {
     background-color: #d9dfff;
     border-color: #4133ff;
 }
 
-.loca-dot .jobInter {
+.jobInter {
     background-color: #ffd7d7;
     border-color: #ff5e5e;
 }
@@ -967,7 +982,7 @@ px
     transition: all .3s;
 }
 
-.social-footer li a:hover{
+.social-footer li a:hover {
     background-color: var(--primary-color);
     color: var(--white-color);
 }
@@ -1009,4 +1024,518 @@ px
 
 .copyright-content ul li a {
     color: var(--primary-color);
+}
+
+/* Jobs Company */
+
+.inner-banner-area {
+    background: url(../img/banner-bg.webp) no-repeat center;
+    background-size: cover;
+}
+
+.manufacturing-jobs-area {}
+
+.manufacturing-jobs-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 1.4vw;
+}
+
+.manufacturing-jobs-item {
+    border: 1px solid #eee;
+    box-shadow: rgb(33 33 33 / 10%) 0px 4px 9px;
+    border-radius: var(--border-2);
+    padding: 1.4vw;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.manufacturing-jobs-item:hover {
+    box-shadow: rgb(33 33 33 / 25%) 0px 6px 10px;
+}
+
+.manufacturing-jobs-item .img {
+    position: relative;
+    min-width: 55px;
+    height: 55px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.manufacturing-jobs-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: border-box;
+    padding: 0;
+    border: none;
+    margin: auto;
+    display: block;
+    width: 0;
+    height: 0;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    object-position: left;
+}
+
+.manufacturing-jobs-item .title {}
+
+.manufacturing-jobs-item .job-company {
+    color: var(--primary-color);
+    padding: 5px 0 4px;
+}
+
+.manufacturing-jobs-item .job-location {
+    font-size: var(--fs-16);
+    color: var(--p-color);
+}
+
+.manufacturing-jobs-item .job-company-footer {
+    padding-top: 20px;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.manufacturing-jobs-item .job-company-footer {}
+
+.manufacturing-jobs-item .job-company-footer .date {
+    font-size: var(--fs-16);
+    color: var(--p-color);
+}
+
+.manufacturing-jobs-item .job-company-footer .theme-btn {}
+
+.pagination {}
+
+
+.pagination .page-link {
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    font-size: var(--fs-18);
+    font-weight: 500;
+    color: var(--black-color);
+}
+
+.pagination .page-link:focus,
+.pagination .page-item.active .page-link,
+.pagination .page-item .page-link:hover {
+    background: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--white-color);
+    box-shadow: none;
+}
+
+.manufacturing-all {
+    display: grid;
+    gap: 25px;
+    height: 100vh;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+
+/* Chip List */
+
+.chip-list-area {
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.chip-list-content {}
+
+.chip-list-content li {}
+
+.chip-list-content li a {
+    padding: 6px 10px;
+    display: inline-block;
+    border: 1px solid var(--primary-color);
+    border-radius: var(--border-2);
+    color: var(--primary-color);
+    font-size: 15px;
+    font-weight: 500;
+    transition: all .3s;
+}
+
+.chip-list-content li a.active,
+.chip-list-content li a:hover {
+    color: var(--white-color);
+    background-color: var(--primary-color);
+}
+
+.manufacturing-details {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.manufacturing-details-header {
+    border-radius: var(--border-2);
+    border: 1px solid #eee;
+    box-shadow: rgb(33 33 33 / 10%) 0px 4px 9px;
+    padding: 1.4vw;
+}
+
+.descriptionstyles {
+    background: #f9f9f9;
+    padding: 25px;
+    overflow-y: scroll;
+    height: calc(100vh - 140px);
+}
+
+.descriptionstyles strong {
+    font-weight: 600;
+}
+
+.descriptionstyles ul {
+    margin: 12px 0;
+    margin-left: 20px;
+}
+
+.descriptionstyles ul li {
+    position: relative;
+    display: flex;
+    gap: 14px;
+}
+
+.descriptionstyles ul li::before {
+    content: '\f111';
+    font-family: "Font Awesome 6 free";
+    font-weight: 700;
+    font-size: 8px;
+    margin-top: 5px;
+    color: var(--primary-color);
+}
+
+.descriptionstyles a {
+    color: var(--primary-color);
+}
+
+.leaderboard-area {}
+
+.leaderboard-content {
+    display: grid;
+    gap: 20px;
+}
+
+.leaderboard-item {
+    display: grid;
+    grid-template-columns: 190px 1fr 150px 100px 100px;
+    position: relative;
+    border: 1px solid #eee;
+    border-radius: var(--border-2);
+    align-items: center;
+    gap: 20px;
+    background-color: #ECEFF3;
+    padding-right: 20px;
+}
+
+.leaderboard-item .number {
+    color: #c5c5c5;
+}
+
+.leaderboard-item .name {
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    padding: 24px 12px;
+    text-align: center;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.leaderboard-item .name::before {
+    content: '';
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    bottom: 50%;
+    transform: translateY(50%);
+    border-radius: 100%;
+    right: 0;
+    z-index: -1;
+
+    background: rgb(204 204 204 / 50%);
+}
+
+.leaderboard-item .name img {
+    width: 70px;
+    border-radius: 100px;
+    margin: 0 auto;
+}
+
+.leaderboard-item:nth-child(1) {
+    background: rgba(255, 245, 155, 0.322);
+}
+
+.leaderboard-item:nth-child(1) .name::before {
+    background: rgb(255, 220, 62);
+}
+
+.leaderboard-item:nth-child(1) .number {
+    color: rgb(255, 208, 0);
+}
+
+.leaderboard-item:nth-child(2) {
+    background: rgba(227, 255, 203, 0.5);
+}
+
+.leaderboard-item:nth-child(2) .name::before {
+    background: rgb(185, 255, 139);
+}
+
+.leaderboard-item:nth-child(2) .number {
+    color: rgb(102, 255, 0);
+}
+
+.leaderboard-item:nth-child(3) {
+    background: rgba(193, 221, 248, 0.5);
+}
+
+.leaderboard-item:nth-child(3) .name::before {
+    background: rgb(63, 143, 248);
+}
+
+.leaderboard-item:nth-child(3) .number {
+    color: rgb(0, 110, 255);
+}
+
+.leaderboard-item .number {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -90px;
+    font-size: 95px;
+    font-weight: 900;
+    width: 100px;
+    text-align: right;
+    z-index: 11;
+}
+
+
+
+.leaderboard-item .user-name .h5 {
+    font-weight: 900;
+    font-size: var(--fs-25)
+}
+
+.leaderboard-item .text {
+    text-align: center;
+}
+
+.leaderboard-item .text strong {
+    font-size: var(--fs-30);
+    color: var(--black-color);
+}
+
+.leaderboard-item .text span {
+    color: var(--black-color);
+    font-weight: 600;
+}
+
+.leaderboard-item .Featured-badge {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+}
+
+.leaderboard-item .Featured-badge img {
+    width: 50px;
+}
+
+.leaderboard-item .reward {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+}
+
+.leaderboard-item .reward img {}
+
+.leaderboard-item .reward-win i {
+    color: rgb(0, 17, 255);
+}
+
+.leaderboard-item .reward-win {
+    font-size: 11px;
+    text-align: center;
+    font-weight: 600;
+    color: var(--black-color);
+}
+
+.achievers-banner-area {
+    background: #eee;
+}
+
+.achievers-leaderboard {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.achievers-leaderboard .h2 {
+    color: var(--black-color);
+    font-size: var(--fs-50);
+    font-weight: 700;
+}
+
+.achievers-leaderboard img {}
+
+.leader-item-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 18px;
+}
+
+.leader-item:nth-child(2) {
+    margin-top: 40px;
+}
+
+.leader-item:nth-child(3) {
+    margin-top: 80px;
+}
+
+.leader-item {
+    border-radius: var(--border-2);
+    max-height: 267px;
+    position: relative;
+}
+
+.leader-item img {
+    border-radius: 100px;
+    margin: 0 auto;
+}
+
+.leader-item .number {
+    background-color: #00a2e262;
+    display: inline-block;
+    color: #000;
+    padding: 2px 15px;
+    border-radius: var(--border-2);
+}
+
+.leader-item .reward-win {
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--primary-color);
+}
+
+.leader-home .theme-btn {
+    background-color: #fff;
+    color: var(--primary-color);
+    width: 200px;
+    height: 50px;
+    font-size: var(--fs-20);
+}
+
+.leader-item .award {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.leader-item .award img {
+    margin: 0;
+    width: 39px !important;
+}
+
+.finest-companies {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.finest-companies-item {
+    background: #fff;
+    height: 150px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+.finest-companies-item img {
+    filter: grayscale(1);
+    transition: all .3s;
+}
+
+.finest-companies-item:hover img {
+    filter: grayscale(0);
+}
+
+
+.how-it-work-content{}
+
+.how-it-work-item{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    gap: 30px;
+    border-bottom: 2px solid var(--primary-color);
+    border-left: 2px solid var(--primary-color);
+    padding: 30px;
+    position: relative;
+}
+
+.how-it-work-img img{
+    width: 100%;
+}
+
+.how-it-work-item:nth-child(even){
+    border-right: 2px solid var(--primary-color);
+    border-left: 0;
+    text-align: right;
+}
+.how-it-work-item:last-child{  
+    border-bottom: 0;
+}
+
+.how-it-work-item:nth-child(even) .how-it-work-text{
+    order: 1;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.how-it-work-text{}
+.how-it-work-text .h2 {
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+
+.how-it-work-item .number {
+    position: absolute;
+    left: -37px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 70px;
+    height: 70px;
+    background: var(--primary-color);
+    border-radius: 100px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.how-it-work-item:nth-child(odd) .how-it-work-text{
+    padding-left: 30px;
+}
+
+.how-it-work-item:nth-child(even) .how-it-work-text{
+    padding-right: 60px;
+    
+}
+
+.how-it-work-item:nth-child(even) .number{
+    left: auto;
+    right: -37px;
 }
